Mega commit for server APIs
